Fix layout bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $margin: 10%;
 body {
 	font-size: 1.3rem;
 	font-family: 'Poppins', sans-serif;
-	max-width: 100vh;
+	// max-width: 100vw;
 	overflow-x: hidden;
 	// overflow-y: hidden;
 }
@@ -48,6 +48,7 @@ h3 {
 
 .container {
 	@extend .centerAlign;
+	margin: 0 auto;
 	flex-direction: column;
 	max-width: 100%;
 	// margin: $margin / 3;
@@ -76,48 +77,66 @@ h3 {
 		@extend .circleStyles;
 	}
 	
-	// ~
-	input::-webkit-color-swatch {
-		border: none;
+	input::-o-color-swatch { border: none; }
+	input::-ms-color-swatch { border: none; }
+	input::-webkit-color-swatch { border: none; }
+	input::-webkit-color-swatch { border: none; }
+	input::color-swatch { border: none; }
+}
+
+.palette {
+	display: flex;
+	flex-direction: column;
+
+	// display: grid;
+	// grid-template-rows: auto;
+	// grid-template-columns: 100vw;
+	// justify-content: stretch;
+	// grid-template-areas: 
+	// 	"row1 row1"
+	// 	"row2 row2" 
+	// ;
+
+	.fullWid {
+		// grid-area: row1;//~
+		// width: 100vw;
+		// height: 20vh;
+		max-width: 100%;
+		
+		// width: 100vw;
+		padding: $margin / 2.5;
+		// @extend .centerAlign;
+
+		// flex-direction: column;
+		// display: grid;
+		// justify-content: stretch;
+		// height: 30vh;
+		// margin-top: $margin / -2;
+	}
+
+	.halfWid {
+		// @extend .fullWid;
+		// max-width: 100%;
+		padding: $margin; 
+		// max-width: 50vw;
+	}
+
+	.addSwatch {
+		@extend .circleStyles;
+		background-color: $lightGrey;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 5rem;
+		color: $darkGrey;
+	}
+
+	.anGrid {
+		// grid-area: row2;//~
+		display: grid;
+		// width: 100%;
+		// align-items: stretch;
+		// justify-content: stretch;
+		grid-template-columns: repeat(2, minmax(0, 50vw)); //minmax(0, 1fr));
 	}
 }
-
-.fullWid {
-	width: 100vw;
-	height: 20vh;
-	padding: $margin / 2;
-	@extend .centerAlign;
-	flex-direction: column;
-	// height: 30vh;
-	// margin-top: $margin / -2;
-}
-
-.halfWid {
-	@extend .fullWid; 
-	max-width: 50vw;
-}
-
-.addSwatch {
-	@extend .circleStyles;
-	background-color: $lightGrey;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 5rem;
-	color: $darkGrey;
-}
-
-// .comCon, .anCon {
-// 	h3 { 		padding: $margin / 2; }
-// }
-
-.anGrid {
-	display: grid;
-	grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-// .palette {
-// 	// display: flex;
-// 	div {
-// 		// margin: 5px;
-// 	}
-// }
